--- a/admin/.gitignore
+++ b/admin/.gitignore
@@ -1,1 +1,62 @@
 *.git
+clockspeed
+daemontools
+djbdns
+djbwares
+djbwares-10
+djbwares-2
+djbwares-2.1
+djbwares-3
+djbwares-4
+djbwares-5
+djbwares-6
+djbwares-7
+djbwares-8
+djbwares-9
+libtai
+nosh
+nosh-1.0
+nosh-1.1
+nosh-1.10
+nosh-1.11
+nosh-1.12
+nosh-1.13
+nosh-1.14
+nosh-1.15
+nosh-1.16
+nosh-1.17
+nosh-1.18
+nosh-1.19
+nosh-1.2
+nosh-1.20
+nosh-1.21
+nosh-1.22
+nosh-1.23
+nosh-1.24
+nosh-1.25
+nosh-1.26
+nosh-1.27
+nosh-1.28
+nosh-1.29
+nosh-1.3
+nosh-1.30
+nosh-1.31
+nosh-1.32
+nosh-1.33
+nosh-1.34
+nosh-1.35
+nosh-1.36
+nosh-1.37
+nosh-1.38
+nosh-1.39
+nosh-1.4
+nosh-1.40
+nosh-1.41
+nosh-1.5
+nosh-1.6
+nosh-1.7
+nosh-1.8
+nosh-1.9
+ptyget
+publicfile
+ucspi-tcp
